terraform/infra/modules/security/security_group2.tf
resource "aws_security_group" "allow_traffic_limited" {
  name        = "allow_traffic"
  vpc_id = var.vpc_id

  tags = {
    Name = "allow_traffic_limited"
  }
}
