terraform/infra/modules/security/security_rule2.tf
resource "aws_vpc_security_group_ingress_rule" "allow_ssh_specifiedips" {
  security_group_id = aws_security_group.allow_traffic_limited.id
  cidr_ipv4         = var.vpc_cidr_block
  from_port         = 22
  ip_protocol       = "tcp"
  to_port           = 22
}

resource "aws_vpc_security_group_ingress_rule" "allow_ssh_from_bastion" {
  security_group_id            =  aws_security_group.allow_traffic_limited.id
  referenced_security_group_id = aws_security_group.allow_traffic.id
  from_port                    = 22
  to_port                      = 22
  ip_protocol                  = "tcp"
}

resource "aws_vpc_security_group_egress_rule" "bastion_allow_all_outbound" {
  security_group_id = aws_security_group.allow_traffic.id
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"  # all protocols
}

resource "aws_vpc_security_group_egress_rule" "app_allow_all_outbound" {
  security_group_id = aws_security_group.allow_traffic_limited.id
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
}
